FSPA-194 #comment fixed datepicker styles, code refactoring, remove odd code, lint err

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -108,6 +108,8 @@
     </second-pane>
 
     <third-pane>
-      <ngb-datepicker></ngb-datepicker>
+      <ngb-datepicker
+      [firstDayOfWeek]="7"
+      [maxDate]="maxdate"></ngb-datepicker>
     </third-pane>
 </multi-pane-layout>
