--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -3,7 +3,7 @@
     id="bd-dropdown"
     class="bd-dropdown-wrapper"
     name="bd-dropdown-wrapper">
-      <div class="bd-dropdown-label">
+      <div *ngIf="labelText" class="bd-dropdown-label">
         <label>{{labelText}}</label>
       </div>
       <div class="bd-dropdown-value" name="bd-dropdown-value">
