--- a/src/app/forms/dropoff-form/dropoff-form.component.html
+++ b/src/app/forms/dropoff-form/dropoff-form.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="formGroup">
-  <bd-input
+  <bd-form-datepicker
     class="bd-form-control"
-    placeholder="Date"
-    formControlName="date">
-  </bd-input>
+    formControlName="date"
+  >
+  </bd-form-datepicker>
   <drop-off-commodity-form
     [formArray]="formGroup.controls.commodities"
     [items]="stop.commodities"
