change svg icon to font-icon

--- a/src/app/shared/components/bd-upload-file/bd-upload-file.component.html
+++ b/src/app/shared/components/bd-upload-file/bd-upload-file.component.html
@@ -19,7 +19,7 @@
              {{documentType}}
          </span>
          <span>&nbsp;document or drag it here!</span>
-         <i class="download-icon"></i>
+         <i class="icon-upload"></i>
        </div>
       <div
         *ngSwitchCase="true"
