--- a/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
+++ b/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/font-icons';
 
 .upload-file-wrapper {
   display: flex;
@@ -40,13 +41,11 @@
     }
 
 
-    .download-icon {
+    i {
       position: absolute;
-      right: 10px;
+      right: 8px;
       display: block;
-      width: 25px;
-      height: 25px;
-      background: url('assets/img/download-icon.svg') no-repeat;
+      font-size: 26px;
       bottom: 5px;
     }
 
