FSPA-194 added border bottom to datepicker header

--- a/src/app/shared/components/datepicker/styles/datepicker-navigation.scss
+++ b/src/app/shared/components/datepicker/styles/datepicker-navigation.scss
@@ -10,6 +10,7 @@
   background: $white;
   padding-left: 17px;
   padding-right: 17px;
+  border-bottom: $border;
 
   .arrow-left {
     height: 30px;
