--- a/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.html
@@ -1,6 +1,6 @@
 <div class="customer-popover">
   <div class="section">
-    <span class="blue">{{customer.name}} <span class="black">| {{customer.status}}</span></span>
+    <span class="blue">{{customer.name.slice(0, 16)}} <span class="black">| {{status}}</span></span>
     <span>MC#{{customer.mc}} | USDOT: {{customer.taxId}}</span>
   </div>
   <div class="section">
