--- a/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
+++ b/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
@@ -49,11 +49,13 @@
       bottom: 5px;
     }
 
-    .upload-file-button {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
+    input {
+      &[type='file'] {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+      }
     }
 
     &:hover {
