--- a/src/app/forms/load-document-form/load-document-form.component.html
+++ b/src/app/forms/load-document-form/load-document-form.component.html
@@ -1,8 +1,10 @@
 <div class="preview-container">
   <bd-file-preview
-     *ngFor="let document of this.documents; let i = index;"
-    [documentType]="document.documentType"
-    [itemIndex]="i + 1">
+     *ngFor="let item of this.documents; let i = index;"
+    [documentType]="item.documentType"
+    [itemIndex]="i + 1"
+    [item]="item"
+    (removeFile)="onRemoveFile($event)">
   </bd-file-preview>
 </div>
 
@@ -10,11 +12,11 @@
 <div class="upload-container">
   <bd-upload-file
     [documentType]="'Rate Sheet'"
-    (documentsLoad)="documentsOnLoad($event)">
+    (documentsSelected)="documentsOnLoad($event)">
   </bd-upload-file>
 
   <bd-upload-file
     [documentType]="'Bill of Lading'"
-    (documentsLoad)="documentsOnLoad($event)">
+    (documentsSelected)="documentsOnLoad($event)">
   </bd-upload-file>
 </div>
