FSPA-194 #comment added new functionality to dropdown border bottom

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -2,6 +2,7 @@
   <div *ngIf="!toogleTemplate" dropdownToggle
     id="bd-dropdown"
     class="bd-dropdown-wrapper"
+    [class.hide-border]="isBorder"
     name="bd-dropdown-wrapper">
       <div *ngIf="labelText" class="bd-dropdown-label">
         <label>{{labelText}}</label>
