FSPA-197 add driver popover

--- a/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.scss
+++ b/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.scss
@@ -13,10 +13,10 @@ $black: #333;
 
   span {
     display: block;
+    padding: 3px 0;
     color: $black;
     font-size: $tiny-font-size;
-    line-height: 1.5;
-    white-space: nowrap;
+    line-height: 1;
   }
 
   .blue {
@@ -25,6 +25,7 @@ $black: #333;
 
   .black {
     display: inline-block;
+    padding: 0;
     color: $black;
   }
 }
