--- a/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.scss
+++ b/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.scss
@@ -2,9 +2,9 @@
 
 .trip-popover {
   span {
+    padding: 3px 0;
     color: $blue;
     font-size: $tiny-font-size;
-    line-height: 1.5;
-    white-space: nowrap;
+    line-height: 1;
   }
 }
