--- a/src/app/loads/components/load-stop-card/components/driver-popover/driver-popover.component.scss
+++ b/src/app/loads/components/load-stop-card/components/driver-popover/driver-popover.component.scss
@@ -2,7 +2,7 @@
 
 $black: #333;
 
-.stop-popover {
+.driver-popover {
   overflow: hidden;
 
   .section {
@@ -21,5 +21,11 @@ $black: #333;
 
   .blue {
     color: $blue;
+  }
+
+  .black {
+    display: inline-block;
+    padding: 0;
+    color: $black;
   }
 }
