--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -39,9 +39,10 @@ $btn-secondary-color: $black;
 $placeholder-color: $dark-grey;
 
 /* form border */
-$border: 1px solid $grey;
-$active-border: 1px solid $blue;
-$error-border: 1px solid $red;
+$default-border-size: 1px;
+$border: $default-border-size solid $grey;
+$active-border: $default-border-size solid $blue;
+$error-border: $default-border-size solid $red;
 
 /* default border radius */
 $default-border-radius: 3px;
