--- a/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/trip-popover/trip-popover.component.html
@@ -1,7 +1,7 @@
 <div class="trip-popover">
    <span>TR{{trip.number}}</span>
    <div>
-    <span>{{trip.driverFullName}}</span>
+    <span>{{trip.driver.firstName}} {{trip.driver.lastName}}</span>
     |
     <span>Tk{{trip.truckNumber}}</span>
     |
