FSPA-197 refactoring customer popover

--- a/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/customer-popover/customer-popover.component.html
@@ -16,7 +16,6 @@
     <span>{{customer.addresses[1].zip}}</span>
   </div>
   <div class="section">
-    <span *ngIf="!customer.addresses[0].phoneExtension">{{customer.addresses[0].phone}}</span>
-    <span *ngIf="customer.addresses[0].phoneExtension">{{customer.addresses[0].phone}} x {{customer.addresses[0].phoneExtension}}</span>
+    <span>{{phone}}</span>
   </div>
 </div>
