FSPA-194 #comment fixed issue with cancel,save button under datepicker dropdown items

--- a/src/app/shared/components/datepicker/styles/datepicker-navigation-select.scss
+++ b/src/app/shared/components/datepicker/styles/datepicker-navigation-select.scss
@@ -33,6 +33,7 @@
         }
 
         .bd-dropdown-list {
+          z-index: auto;
           top: $form-control-height + $default-border-size;
           box-shadow: none;
           min-width: 0;
