FSPA-194 #comment fixed datepicker position

--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
@@ -1,3 +1,5 @@
-<div (clickOutside)="onClickOutside($event)">
-  <bd-input [placeholder]="datePlaceholder" [(ngModel)]="model" ngbDatepicker  (focus)="onFocus($event)" #datepicker="ngbDatepicker"></bd-input>
+<div
+class="bd-form-datepicker-container"
+(clickOutside)="onClickOutside($event)">
+  <bd-input [placeholder]="datePlaceholder" [(ngModel)]="model" ngbDatepicker (focus)="onFocus($event)" #datepicker="ngbDatepicker"></bd-input>
 </div>
