FSPA-194 #comment code refactoring, relocate styles from datepicker.ts to datepicker.scss file, lint err

--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formGroup">
   <bd-form-datepicker
-    class="bd-form-control"
+    class="bd-form-control bd-form-datepicker"
     formControlName="date"
   >
   </bd-form-datepicker>
