--- a/src/app/shared/components/stops-line/stops-line.component.html
+++ b/src/app/shared/components/stops-line/stops-line.component.html
@@ -14,6 +14,7 @@
       <bd-popover-content
         #stopPopover
         placement="auto"
+        [width]="220"
         [horizontalOffset]="-10"
         [closeOnClickOutside]="true">
         <stop-popover [stop]="stop"></stop-popover>
