--- a/src/app/shared/directives/bd-popover/bd-popover-content.scss
+++ b/src/app/shared/directives/bd-popover/bd-popover-content.scss
@@ -1,23 +1,38 @@
+@import '../../../../assets/styles/variables';
+
 .popover {
-    background: white;
-    box-shadow: 0px 0px 12px 0px #8c8c8c;
-    border: none;
-    max-width: none;
-}
-.popover .virtual-area {
-    height: 11px;
-    width: 100%;
+  border: 0;
+  background: $white;
+  box-shadow: 0 0 12px 0 $dirty-grey;
+  max-width: none;
+
+  .virtual-area {
     position: absolute;
-}
-.popover.top .virtual-area {
-    bottom: -11px; 
-}
-.popover.bottom .virtual-area {
-    top: -11px; 
-}
-.popover.left .virtual-area {
-    right: -11px; 
-}
-.popover.right .virtual-area {
-    left: -11px; 
+    width: 100%;
+    height: 11px;
+  }
+
+  &.top {
+    .virtual-area {
+      bottom: -11px;
+    }
+  }
+
+  &.bottom {
+    .virtual-area {
+      top: -11px;
+    }
+  }
+
+  &.left {
+    .virtual-area {
+      right: -11px;
+    }
+  }
+
+  &.right {
+    .virtual-area {
+      left: -11px;
+    }
+  }
 }
