--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.scss
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.scss
@@ -1,3 +1,13 @@
-.bd-form-datepicker-container {
+@import '../../../../assets/styles/variables';
+
+/deep/ .bd-form-datepicker-container {
   position: relative;
+
+  .d-inline-block {
+    position: absolute;
+    z-index: $form-control-popup-z-index;
+    display: block;
+    width: 100%;
+    padding: 0;
+  }
 }
