--- a/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
+++ b/src/app/shared/components/bd-form-datepicker/bd-form-datepicker.component.html
@@ -1,3 +1,3 @@
 <div (clickOutside)="onClickOutside($event)">
-  <bd-datepicker (valueChange)="onDateChange($event)" [value]="dateValue" [format]="dateFormat" #datepicker></bd-datepicker>
+  <bd-datepicker (valueChange)="onDateChange($event)" [ngModel]="dateValue" [datePlaceholder]="dateFormat" [format]="dateFormat" #datepicker></bd-datepicker>
 </div>
