--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.html
@@ -1,4 +1,8 @@
 <div class="loaded-file-container">
+  <div
+    class="upload-progress"
+    [style.width.%]="uploadProgress">
+  </div>
   <div class="file-info-container">
     <div class="file-type-container">
         <span class="file-name">
