--- a/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
+++ b/src/app/shared/components/bd-file-preview/bd-file-preview.component.scss
@@ -1,12 +1,23 @@
 @import '../../../../assets/styles/variables';
 
 .loaded-file-container {
+  position: relative;
   display: flex;
-  background: $light-blue;
+  background: $white;
   margin-bottom: 20px;
   flex-direction: row;
 
+  .upload-progress {
+    position: absolute;
+    z-index: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: $light-blue;
+  }
+
   .file-info-container {
+    z-index: 1;
     display: flex;
     width: 80%;
     flex-direction: column;
@@ -15,7 +26,6 @@
       display: flex;
       height: 50px;
       padding: 0 17px;
-      background: $white;
       border-bottom: $border;
       align-items: center;
       justify-content: space-between;
