--- a/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
+++ b/src/app/shared/components/bd-upload-file/bd-upload-file.component.scss
@@ -12,6 +12,7 @@
 
   .upload-file-container {
     position: relative;
+    z-index: 1;
     display: flex;
     border: 2px dashed $grey;
     text-align: center;
@@ -20,24 +21,21 @@
     align-items: center;
     justify-content: center;
 
-    div {
+    .text-container {
       z-index: 1;
+    }
 
-      .text-container {
-        z-index: 1;
-      }
+    .file-choose {
+      font-weight: bold;
+    }
 
-      .file-choose {
-        font-weight: bold;
-      }
-
-      &.upload-progress {
-        position: absolute;
-        z-index: 0;
-        right: 0;
-        height: 100%;
-        background: $white;
-      }
+    .dragover {
+      position: absolute;
+      z-index: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background: $white;
     }
 
 
