--- a/src/app/multi-pane-layout/multi-pane-layout.component.html
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.html
@@ -1,17 +1,31 @@
 <div class="main-area">
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.FirstPaneVisible)">
+    <bd-resize-container #firstPane [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
         <div class="panel">
             <ng-content select="first-pane"></ng-content>
         </div>
-    </div>
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.SecondPaneVisible)">
+    </bd-resize-container>
+    <bd-resizer
+        [resizer]="'horizontal'"
+  		[resizerWidth]="'20'" 
+  		[resizerFirst]="firstPane" 
+  		[resizerSecond]="secondPane"
+  		[resizerMin]="'320'">
+    </bd-resizer>
+    <bd-resize-container #secondPane [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
         <div class="panel">
             <ng-content select="second-pane"></ng-content>
         </div>
-    </div>
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.ThirdPaneVisible)">
+    </bd-resize-container>
+    <bd-resizer
+        [resizer]="'horizontal'"
+  		[resizerWidth]="'20'" 
+  		[resizerFirst]="secondPane" 
+  		[resizerSecond]="thirdPane"
+  		[resizerMin]="'320'">
+    </bd-resizer>
+    <bd-resize-container #thirdPane [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
         <div class="panel">
             <ng-content select="third-pane"></ng-content>
         </div>
-    </div>
+    </bd-resize-container>
 </div>
