--- a/src/app/multi-pane-layout/multi-pane-layout.component.scss
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.scss
@@ -1,20 +1,18 @@
 .main-area {
+  display: flex;
   overflow: hidden;
   height: 100vh;
-  padding: 20px 10px 0;
+  padding: 20px 20px 0;
 }
 
 .panel {
   height: calc(100vh - 40px);
   border: 0;
-  margin: 0 10px 20px;
+  margin: 0 0 20px;
   background: transparent;
   overflow-y: auto;
 }
 
-.col-sm-4,
-.col-sm-6,
-.col-sm-12 {
-  padding: 0;
-  margin: 0;
+bd-resize-container {
+  position: relative;
 }
