add load document form to Load form

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -106,6 +106,10 @@
       </bd-textarea>
     </bd-form-section>
   </bd-form-section>
+  <navigation-anchor id="documents"></navigation-anchor>
+  <bd-form-section labelText="DOCUMENTS">
+    <load-document-form [items]="load.documents"></load-document-form>
+  </bd-form-section>
   <form-sticky-bottom-container>
     <div class="button-group">
       <bd-button
