--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -20,6 +20,7 @@
           (select)="onSelect($event)"
           [limit]="10">
         </ngx-datatable>
+        <customer-card></customer-card>
       </div>
     </first-pane>
     <second-pane>
