--- a/src/app/multi-pane-layout/multi-pane-layout.component.html
+++ b/src/app/multi-pane-layout/multi-pane-layout.component.html
@@ -1,29 +1,29 @@
 <div class="main-area">
-    <bd-resize-container #firstPane [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
+    <bd-resize-container #firstPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.FirstPaneVisible)">
         <div class="panel">
             <ng-content select="first-pane"></ng-content>
         </div>
     </bd-resize-container>
     <bd-resizer
-        [resizer]="'horizontal'"
-  		[resizerWidth]="'20'" 
+        [resizer]="resizerDiection"
+  		[resizerWidth]="resizerWidth" 
   		[resizerFirst]="firstPane" 
   		[resizerSecond]="secondPane"
-  		[resizerMin]="'320'">
+  		[resizerMin]="resizerMin">
     </bd-resizer>
-    <bd-resize-container #secondPane [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
+    <bd-resize-container #secondPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.SecondPaneVisible)">
         <div class="panel">
             <ng-content select="second-pane"></ng-content>
         </div>
     </bd-resize-container>
     <bd-resizer
-        [resizer]="'horizontal'"
-  		[resizerWidth]="'20'" 
+        [resizer]="resizerDiection"
+  		[resizerWidth]="resizerWidth" 
   		[resizerFirst]="secondPane" 
   		[resizerSecond]="thirdPane"
-  		[resizerMin]="'320'">
+  		[resizerMin]="resizerMin">
     </bd-resizer>
-    <bd-resize-container #thirdPane [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
+    <bd-resize-container #thirdPane [width]="getWidth()" [hidden]="!isVisible(switchStateEnum.ThirdPaneVisible)">
         <div class="panel">
             <ng-content select="third-pane"></ng-content>
         </div>
