--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -7,25 +7,25 @@
       <span>Benjamin von Battenvolken</span>
     </div>
     <div class="right">
-      <div class="first-load-container">
-        <span class="first-load-circle"></span>
-        <span class="first-load">LD349616</span>
+      <div class="load-container">
+        <span class="load-circle"></span>
+        <span class="load-name">LD349616</span>
       </div>
-      <div class="second-load-container">
-        <span class="second-load-circle"></span>
-        <span class="second-load">LD349616</span>
+      <div class="load-container">
+        <span class="load-circle"></span>
+        <span class="load-name">LD349616</span>
       </div>
     </div>
   </div>
 
   <div class="bottom">
     <div class="left">
-      <span>CH Robinson</span>
-      <span>MC # 23243564</span>
+      <div>CH Robinson</div>
+      <div>MC # 23243564</div>
     </div>
     <div class="middle">
-      <span>Customer succsess</span>
-      <span>phone +2732618381</span>
+      <div>Customer succsess</div>
+      <div>phone +2732618381</div>
     </div>
     <div class="right">
       <div class="first-load-container">
