--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -9,7 +9,7 @@
     (update)="onCommodityUpdate($event)"
     (remove)="onCommodityRemove($event)"
     (add)="onCommodityAdd()"
-    [items]="stop.commodities"
+    [items]="pickupCommodities$ | async"
     [viewMode]="viewMode">
   </pick-up-commodity-form>
   <bd-input
