FSPA-226 #comment code refactoring

--- a/src/app/customers/components/customer-card/customer-card.component.html
+++ b/src/app/customers/components/customer-card/customer-card.component.html
@@ -20,11 +20,11 @@
 
   <div class="bottom">
     <div class="left">
-      <div>CH Robinson</div>
+      <div class="customer-name">CH Robinson</div>
       <div>MC # 23243564</div>
     </div>
     <div class="middle">
-      <div>Customer succsess</div>
+      <div class="position">Customer succsess</div>
       <div>phone +2732618381</div>
     </div>
     <div class="right">
