--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,12 +1,13 @@
 <multi-pane-layout>
-    <first-pane>
-      <div class="data-panel">
-        <customer-card></customer-card>
-      </div>
-    </first-pane>
-    <second-pane>
-    </second-pane>
-    <third-pane>
-      <router-outlet></router-outlet>
-    </third-pane>
+  <first-pane>
+    <div class="data-panel">
+      <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
+      </bd-button>
+    </div>
+  </first-pane>
+  <second-pane>
+  </second-pane>
+  <third-pane>
+    <router-outlet></router-outlet>
+  </third-pane>
 </multi-pane-layout>
